--- a/app/views/_diaryPartial.scala.html
+++ b/app/views/_diaryPartial.scala.html
@@ -1,52 +1,57 @@
 @(diaryEntryForm : Form[DiaryEntry])
 @import helper._
-
-@helper.input(diaryEntryForm("id"), '_label -> "id", '_class -> "hide"){(id, name, value, args) =>
+    @helper.input(diaryEntryForm("id"), '_label -> "id", '_class -> "hide"){(id, name, value, args) =>
     <input type="hidden" id="@id" name="@name" value="@value">@diaryEntryForm("id").valueOr("")</input>
-}
+    }
 
-@helper.input(diaryEntryForm("submittedOn"), '_label -> "Date Submitted"){(id, name, value, args) =>
+    @helper.input(diaryEntryForm("submittedOn"), '_label -> "Date Submitted"){(id, name, value, args) =>
     <input type="hidden" id="@id" name="@name" value="@value"></input>
     <p>@value</p>
-}
+    }
 
-@helper.input(diaryEntryForm("stress"), '_label -> "Stress Management") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','stressSlider');">
-    <span id ="stressSlider">@value</span>
-}
+    @helper.input(diaryEntryForm("stress"), '_label -> "Stress Management") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value="@value"
+           onchange="updateSlideValue('@id','stressSlider');">
+    <span id="stressSlider">@value</span>
+    }
 
-@helper.input(diaryEntryForm("mood"), '_label -> "Mood and Energy") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','moodSlider');">
-    <span id ="moodSlider">@value</span>
-}
+    @helper.input(diaryEntryForm("mood"), '_label -> "Mood and Energy") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value="@value"
+           onchange="updateSlideValue('@id','moodSlider');">
+    <span id="moodSlider">@value</span>
+    }
 
-@helper.input(diaryEntryForm("sleep"), '_label -> "Sleep Quality") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','sleepSlider');">
-    <span id ="sleepSlider">@value</span>
-}
+    @helper.input(diaryEntryForm("sleep"), '_label -> "Sleep Quality") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value="@value"
+           onchange="updateSlideValue('@id','sleepSlider');">
+    <span id="sleepSlider">@value</span>
+    }
 
-@helper.input(diaryEntryForm("muscles"), '_label -> "Muscle Readiness") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','muscleSlider');">
-    <span id ="muscleSlider">@value</span>
-}
+    @helper.input(diaryEntryForm("muscles"), '_label -> "Muscle Readiness") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value="@value"
+           onchange="updateSlideValue('@id','muscleSlider');">
+    <span id="muscleSlider">@value</span>
+    }
 
-@helper.input(diaryEntryForm("nutrition"), '_label -> "Yesterday's nutrition") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','nutritionSlider');">
-    <span id ="nutritionSlider">@value</span>
-}
+    @helper.input(diaryEntryForm("nutrition"), '_label -> "Yesterday's nutrition") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value="@value"
+           onchange="updateSlideValue('@id','nutritionSlider');">
+    <span id="nutritionSlider">@value</span>
+    }
 
 
-<dl><dt><label>Sore Body Parts</label></dt></dl>
-<dd>
-@checkbox(diaryEntryForm("arms"), '_label -> "Arms", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("legs"), '_label -> "Legs", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("back"), '_label -> "Back", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("chest"), '_label -> "Chest", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("feet"), '_label -> "Feet", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("neck"), '_label -> "Neck", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("shoulder"), '_label -> "Shoulder", '_class -> "inlineCheckBox")
-@checkbox(diaryEntryForm("other"), '_label -> "Other", '_class -> "inlineCheckBox")
-</dd>
-@textarea(diaryEntryForm("comment"), '_label -> "Additional Comments", '_class -> "commentBox")
-
-<input type ="submit" class = "btn btn-primary" value = "Submit"/>
+    <dl>
+        <dt><label>Sore Body Parts</label></dt>
+    </dl>
+    <dd>
+        @checkbox(diaryEntryForm("arms"), '_label -> "Arms", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("legs"), '_label -> "Legs", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("back"), '_label -> "Back", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("chest"), '_label -> "Chest", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("feet"), '_label -> "Feet", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("neck"), '_label -> "Neck", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("shoulder"), '_label -> "Shoulder", '_class -> "inlineCheckBox")
+        @checkbox(diaryEntryForm("other"), '_label -> "Other", '_class -> "inlineCheckBox")
+    </dd>
+    @textarea(diaryEntryForm("comment"), '_label -> "Additional Comments", '_class -> "commentBox")
+    <input type="submit" class="btn btn-primary" value="Submit">
