--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,75 +2,14 @@
 @(userProvider: UserProvider, diaryEntries : List[DiaryEntry], userName : String, userMail : String, pageNo : Integer , totalPages : Integer, admin : Boolean, users : List[User])
 
 @main(userProvider, "Coach Monitor") {
+    @if(admin && !users.isEmpty()){
+        <input type="text" id="searchBox" onkeyup="searchTable()" placeholder="Search athletes...">
+    <a onclick="getAthleteEntries('@routes.Application.getAthleteJournalEntries("rorybyrnecoach@gmail.com",1)')" class="btn btn-primary">
 
-    @if(diaryEntries.isEmpty()){
-        <p>Oops, you don't have any diary entries yet, please submit one <a href="@routes.Application.create">here</a>.
-        </p>
-    }else{
-        @if(admin && !users.isEmpty()){
-            <input type="text" id="searchBox" onkeyup="searchTable()" placeholder="Search athletes...">
-        }
-        <table id="athlete-table" class="table table-bordered table-hover table-condensed table-responsive">
-            <tr>
-                <th>Athlete</th>
-                <th>Sore Body Parts</th>
-                <th>Athlete's Comment</th>
-                <th>Stress Management</th>
-                <th>Mood/Energy</th>
-                <th>Sleep Quality</th>
-                <th>Muscle Readiness</th>
-                <th>Yesterday's Nutrition</th>
-                <th>Coach Feedback</th>
-                <th></th>
-
-            </tr>
-            @for(diaryEntry <- diaryEntries){
-                <tr>
-                    <td>@diaryEntry.user.name, @diaryEntry.submittedOn <small>(@diaryEntry.user.email)</small></td>
-
-                    <td>
-                        @if(diaryEntry.arms){Arms}
-                        @if(diaryEntry.legs){Legs}
-                        @if(diaryEntry.back){Back}
-                        @if(diaryEntry.chest){Chest}
-                        @if(diaryEntry.feet){Feet}
-                        @if(diaryEntry.neck){Neck}
-                        @if(diaryEntry.shoulder){Shoulder}
-                        @if(diaryEntry.other){Other}
-
-                    </td>
-                    <td>@diaryEntry.comment</td>
-                    <td class="colourCell">@diaryEntry.stress</td>
-                    <td class="colourCell">@diaryEntry.mood</td>
-                    <td class="colourCell">@diaryEntry.sleep</td>
-                    <td class="colourCell">@diaryEntry.muscles</td>
-                    <td class="colourCell">@diaryEntry.nutrition</td>
-                    <td>@diaryEntry.coachComment</td>
-                    <td>
-                    @if(userMail.equalsIgnoreCase(diaryEntry.user.email)){
-
-                            <a href="@routes.Application.edit(diaryEntry.id)">
-                                <span class="glyphicon glyphicon-edit"></span>
-                            </a>
-                            <a onclick="del('@routes.Application.delete(diaryEntry.id)')">
-                                <span class="glyphicon glyphicon-remove"></span>
-                            </a>
-                    }else{
-                        <a class="btn btn-primary" href="@routes.Application.provideFeedback(diaryEntry.id)">Give Feedback</a>
-                        }
-                    </td>
-                </tr>
-            }
-        </table>
-        @if(totalPages > 1){
-            <div class="pagination">
-                @if(pageNo > 1){<a href="@routes.Application.index(1)">&laquo;</a>}
-                @for(pageCount <- 1 to totalPages){
-                <a href="@routes.Application.index(pageCount)">@pageCount</a>
-                }
-
-                <a href="@routes.Application.index(totalPages)">&raquo;</a>
-            </div>
-        }
+        Get Rory Byrne
+    </a>
     }
+    <div id="journalEntries">
+        @_desktopPartial(diaryEntries, userName, userMail, pageNo, totalPages)
+    </div>
 }
