--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -5,16 +5,8 @@
 @implicitFieldConstructor = @{ FieldConstructor(twitterBootstrapBasic.f) }
 
 @main(userProvider, Messages("playauthenticate.signup.title"),"signup") {
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-8">
+        <div id="container">
       <h1>@Messages("playauthenticate.signup.title")</h1>
-    </div>
-  </div>
-
-  <div id="signup" class="row">
-
-    <div class="col-xs-6 col-md-4">
         @* Display proprietary login form *@
     	@helper.form(routes.Application.doSignup, 'class -> "form-horizontal", 'role -> "form") {
 
@@ -35,10 +27,5 @@
 
             <button type="submit" class="btn btn-default">@Messages("playauthenticate.signup.now")</button>
     	}
-    </div>
-
-
-
-  </div>
-
+        </div>
 }
