--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,14 +5,13 @@
     @if(admin && !users.isEmpty()){
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="@routes.Application.index()">All Athletes</a>
             @for(user <- users){
                 <a onclick="getAthleteEntries('@routes.Application.getAthleteJournalEntries(user.email,1)')">@user.name <br/><small>(@user.email)</small> </a>
             }
         </div>
-
         <!-- Use any element to open the sidenav -->
         <a onclick="openNav()" class="btn btn-primary">Search Athletes</a>
-
     </a>
     }
     <div id = "main">
