--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,7 +91,6 @@ h1 {
 .commentBox{
     display: block;
     clear:both;
-
 }
 
 /* The side navigation menu */
@@ -102,7 +101,7 @@ h1 {
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #111; /* Black*/
+    background-color: #222; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -112,7 +111,7 @@ h1 {
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
- /*   font-size: 25px;*/
+    font-size: 14px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -121,13 +120,15 @@ h1 {
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
     color: #f1f1f1;
+    cursor: pointer;
 }
 
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
-    right: 25px;
     font-size: 36px;
     margin-left: 170px;
+    display: inline;
+    float: right;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -140,4 +141,18 @@ h1 {
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
